# parcellate

./: .gitignore  README.md  pyproject.toml
cfg/PereiraE1_sem/: 018.yml  050.yml  199.yml  215.yml  252.yml  280.yml  288.yml  289.yml  296.yml  298.yml  343.yml  361.yml  366.yml  407.yml  408.yml  411.yml  426.yml
expt_info/: Args_PereiraE1.tsv
notebooks/: pereiraE1_sem.ipynb
pbs/PereiraE1_sem/: 018_parcellate-node084-40342911.out  018_parcellate.pbs  050_parcellate.pbs  199_parcellate.pbs  215_parcellate.pbs  252_parcellate.pbs  280_parcellate.pbs  288_parcellate.pbs  289_parcellate.pbs  296_parcellate.pbs  298_parcellate.pbs  343_parcellate.pbs  361_parcellate.pbs  366_parcellate.pbs  407_parcellate.pbs  408_parcellate.pbs  411_parcellate.pbs  426_parcellate.pbs
scripts/: pereiraE1_sem.py  submit_jobs.py  utils.py
src/parcellate/: constants.py  data.py  model.py
src/parcellate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
